--- a/client/chat.html
+++ b/client/chat.html
@@ -3,10 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>life social</title>
+    <title>chat room</title>
   </head>
   <body>
-    <h1>App Hello</h1>
-    <p>let go together</p>
+    <h1>Chat Room here</h1>
   </body>
 </html>
