--- a/client/index.html
+++ b/client/index.html
@@ -3,13 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    ,
+
     <link rel="stylesheet" href="style.css" />
     <title>life social 👫</title>
   </head>
   <body>
     <div id="gridContainer">
-      <div id="messgae"><ul id="message"></ul></div>
+      <div>
+        <ul id="messages"></ul>
+      </div>
       <div>
         <form id="grpMsgForm">
           <input id="grpMsgInput" />
