handle user name on joining

--- a/client/index.html
+++ b/client/index.html
@@ -10,6 +10,7 @@
   <body>
     <div id="gridContainer">
       <div>
+        <p id="newUserConnection"></p>
         <ul id="messages"></ul>
       </div>
       <div>
