user messaging and recieving

--- a/client/index.html
+++ b/client/index.html
@@ -10,7 +10,7 @@
   <body>
     <div id="gridContainer">
       <div>
-        <p id="newUserConnection"></p>
+        <p id="connectionStatus"></p>
         <ul id="messages"></ul>
       </div>
       <div>
