list all online users

--- a/client/index.html
+++ b/client/index.html
@@ -11,7 +11,12 @@
     <div id="gridContainer">
       <div>
         <p id="connectionStatus"></p>
+        <p id="typing"></p>
         <ul id="messages"></ul>
+      </div>
+      <div class="listOfUsers">
+        <h3>Online users</h3>
+        <ul id="connectedUsers"></ul>
       </div>
       <div>
         <form id="grpMsgForm">
