send private mesg component

--- a/client/index.html
+++ b/client/index.html
@@ -8,6 +8,7 @@
     <title>life social 👫</title>
   </head>
   <body>
+    <h1>Younglifes</h1>
     <div id="gridContainer">
       <div>
         <p id="connectionStatus"></p>
@@ -18,6 +19,7 @@
         <h3>Online users</h3>
         <ul id="connectedUsers"></ul>
       </div>
+      <form id="privateMsgs"></form>
       <div>
         <form id="grpMsgForm">
           <input id="grpMsgInput" />
