--- a/client/index.html
+++ b/client/index.html
@@ -4,30 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="stylesheet" href="style.css" />
-    <title>life social 👫</title>
+    <title>Document</title>
   </head>
   <body>
-    <h1>Younglifes</h1>
-    <div id="gridContainer">
-      <div>
-        <p id="connectionStatus"></p>
-        <p id="typing"></p>
-        <ul id="messages"></ul>
-      </div>
-      <div class="listOfUsers">
-        <h3>Online users</h3>
-        <ul id="connectedUsers"></ul>
-      </div>
-      <form id="privateMsgs"></form>
-      <div>
-        <form id="grpMsgForm">
-          <input id="grpMsgInput" />
-          <button>Send to all</button>
-        </form>
-      </div>
-    </div>
-    <script src="/socket.io/socket.io.js" defer></script>
-    <script src="/script.js" defer></script>
+    <h1>Young messengers</h1>
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
