--- a/client/index.html
+++ b/client/index.html
@@ -8,7 +8,18 @@
   </head>
   <body>
     <h1>Young messengers</h1>
-    <script src="/socket.io/socket.io.js"></script>
-    <script src="script.js"></script>
+
+    <div id="gridContainer">
+      <div id="chatApp">
+        <ul id="messages"></ul>
+      </div>
+      <div >
+        <form id="grpMsgForm">
+          <input id="grpMsgInput"/>
+        </form>
+      </div>
+    </div>
+    <script src="/socket.io/socket.io.js" defer></script>
+    <script src="script.js" defer></script>
   </body>
 </html>
