--- a/client/index.html
+++ b/client/index.html
@@ -11,6 +11,7 @@
 
     <div id="gridContainer">
       <div id="chatApp">
+        <p id="typing"></p>
         <p id="connectionStatus"></p>
         <ul id="messages"></ul>
       </div>
