--- a/client/index.html
+++ b/client/index.html
@@ -11,14 +11,14 @@
 
     <div id="gridContainer">
       <div id="chatApp">
-        <p id="typing"></p>
         <p id="connectionStatus"></p>
+        <p id="typing"></p>
         <ul id="messages"></ul>
       </div>
       <div>
         <form id="grpMsgForm">
           <input id="grpMsgInput" />
-          <button>Send to all</button>
+          <button>Broadcast</button>
         </form>
       </div>
     </div>
