--- a/client/index.html
+++ b/client/index.html
@@ -15,6 +15,10 @@
         <p id="typing"></p>
         <ul id="messages"></ul>
       </div>
+      <div id="listOfUsers">
+        <h1>Connected Users</h1>
+        <ul id="connectedUsers"></ul>
+      </div>
       <div>
         <form id="grpMsgForm">
           <input id="grpMsgInput" />
