private msg sending

--- a/client/index.html
+++ b/client/index.html
@@ -19,6 +19,7 @@
         <h1>Connected Users</h1>
         <ul id="connectedUsers"></ul>
       </div>
+      <form id="privateMsgs"></form>
       <div>
         <form id="grpMsgForm">
           <input id="grpMsgInput" />
