private group creating

--- a/client/index.html
+++ b/client/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <h1>Young messengers</h1>
+    <button id="createGrp">Private Group</button>
 
     <div id="gridContainer">
       <div id="chatApp">
