--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Young messengers</h1>
+    <h1>YoungLife Broadcast</h1>
 
     <div id="gridContainer">
       <div id="chatApp">
@@ -17,7 +17,7 @@
       <div>
         <form id="grpMsgForm">
           <input id="grpMsgInput" />
-          <button>Send to all</button>
+          <button>Broadcast</button>
         </form>
       </div>
     </div>
