--- a/client/index.html
+++ b/client/index.html
@@ -7,13 +7,20 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>YoungLife Broadcast</h1>
+    <h1>Young messengers</h1>
+    <button id="createGrp">Private Group</button>
 
     <div id="gridContainer">
       <div id="chatApp">
-        <p id="newUser"></p>
+        <p id="connectionStatus"></p>
+        <p id="typing"></p>
         <ul id="messages"></ul>
       </div>
+      <div id="listOfUsers">
+        <h1>Connected Users</h1>
+        <ul id="connectedUsers"></ul>
+      </div>
+      <form id="privateMsgs"></form>
       <div>
         <form id="grpMsgForm">
           <input id="grpMsgInput" />
